# ppm-telegram-bot

./: .travis.yml  Dockerfile  LICENSE  README.md  build.gradle  gradle.properties  pyproject.toml  run-app.sh  settings.gradle  setup.cfg
.github/workflows/: check-release.yml  lint.yml  release.yml
gradle/wrapper/: gradle-wrapper.properties
ppm_telegram_bot/: __init__.py  api.py  dependencies.py  settings.py  templates.py
ppm_telegram_bot/routers/: telegram.py  triggers.py
ppm_telegram_bot/telegram/: __init__.py  bot.py  dispatcher.py  fsm.py
resources/: application.conf
scripts/: validate_poetry_version.py
src/: Application.kt
test/: ApplicationTest.kt
