[tool.poetry]
name = "ppm-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Dima Boger <meetup@piterpy.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.6.1"
pydantic = "^1.4"
fastapi = "^0.52.0"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
