[tool.poetry]
name = "ppm-telegram-bot"
version = "0.1.8"
description = ""
authors = ["Dima Boger <meetup@piterpy.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.52.0"
fastapi_security_telegram_webhook = "0.2.0"
pydantic = "^1.4"
aiogram = "^2.6.1"
uvicorn = "^0.11.3"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
black = "^19.10b0"
twine = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
